# heatmaps

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tox.ini
.github/workflows/: python-app.yml
heatmaps/: __main__.py  index.py  server.py  utils.py
heatmaps/data/: __init__.py  abc.py  covid.py  schema.md
heatmaps/static/css/: main.css  main.sass
heatmaps/static/js/: index.js
heatmaps/templates/: index.html  index.js  main.js  map.js
